@@ -37,6 +37,11 @@ public:
   }
 };
 
+  /** Nested namespace. Ignored for now.
+   */
+  namespace SubNem {
+    class X {};
+  } // SubNem
 } // Nem
 
 #endif // NAMESPACE_A_H_
