@@ -28,6 +28,7 @@
   * Added @dub bind: false option to not create bindings.
   * Added @dub destructor: false option to not destroy from lua.
   * @dub ignore can be used to ignore attributes.
+  * Ignoring nested namespaces instead of crash.
 
 == 2.0.0 2012-01-21
 * Complete rewrite in Lua
